--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
   },
   "scripts": {
     "start": "node backend/routes/server.js",
-    "build": "react-scripts build",
+    "build": "npm start && npm run dev",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "vercel-build": "npm install && npm run migrate",
+    "vercel-build": "npm install && npm run build",
     "dev": "vercel dev",
     "migrate": "npx sequelize-cli db:migrate",
     "deploy": "vercel --prod"
