--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
-    "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
@@ -28,15 +27,13 @@
     "nodemailer": "^6.10.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "pg": "^8.14.1",
-    "pg-hstore": "^2.3.4",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
-    "sequelize": "^6.37.7",
+    "sequelize": "^6.37.6",
     "sqlite3": "^5.1.7",
     "stream": "^0.0.3",
     "stream-browserify": "^3.0.0",
@@ -46,14 +43,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node backend/routes/server.js",
-    "build": "npm start && npm run dev",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "vercel-build": "npm install && npm run build",
-    "dev": "vercel dev",
-    "migrate": "npx sequelize-cli db:migrate",
-    "deploy": "vercel --prod"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -74,7 +67,6 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.2.1",
-    "sequelize-cli": "^6.6.2"
+    "react-app-rewired": "^2.2.1"
   }
 }
