--- a/package.json
+++ b/package.json
@@ -50,10 +50,7 @@
     "build": "npm start && npm run dev",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "vercel-build": "npm install && npm run build",
-    "dev": "vercel dev",
-    "migrate": "npx sequelize-cli db:migrate",
-    "deploy": "vercel --prod"
+    "dev": "vercel dev"
   },
   "eslintConfig": {
     "extends": [
